Added default R and Rscript path in Mac OS X and fixed some charset bugs.